Minor style and behavior changes and whatnot
Changed "Privacy Policy" to "Privacy Notice".

Moved dark mode switch to top of body in DOM tree. Fixes very niche and subtle issue. Previously, if you spam clicked the button, it worked as intended, but it also highlighted some text as a selection. Fixed this. No noticeable issues from some limited testing.

Changed "Delete All Cookies" from preset width to auto. Not sure why it wasn't already that way. This should fix issues where, on some screens, "Delete All Cookies" appears on two lines instead of just one.

--- a/coding.html
+++ b/coding.html
@@ -33,6 +33,10 @@
 </head>
 
 <body>
+    <div id="dark-mode-btn">
+        <input id="btn-circle" type="button"></input>
+    </div>
+
     <nav class="navbar navbar-expand-md navbar-light bg-light py-2 mb-5 shadow fixed-top" id="navbar">
         <div class="container">
             <a class="navbar-brand navbar-brand-custom" href="/">
@@ -64,10 +68,6 @@
         </div>
     </nav>
 
-    <div id="dark-mode-btn">
-        <input id="btn-circle" type="button"></input>
-    </div>
-
     <div class="container">
         <div class="body-content-custom">
             <h1 class="text-center">Coming soon!</h1>
@@ -81,7 +81,7 @@
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
                         href="/privacy.html">Privacy
-                        Policy</a></p>
+                        Notice</a></p>
                 <p class="justify-content-center" id="delete-cookies-wrapper"><span id="delete-cookies">Delete All
                         Cookies</span></p>
             </footer>
