--- a/privacy.html
+++ b/privacy.html
@@ -2,7 +2,7 @@
 <html lang="en-US" dir="ltr">
 
 <head>
-    <title>Privacy Policy | Pete Smith</title>
+    <title>Privacy Notice | Pete Smith</title>
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
     <meta name="description" content="Privacy Policy">
     <meta name="author" content="Pete Smith">
@@ -34,6 +34,10 @@
 </head>
 
 <body>
+    <div id="dark-mode-btn">
+        <input id="btn-circle" type="button"></input>
+    </div>
+
     <nav class="navbar navbar-expand-md navbar-light bg-light py-2 mb-5 shadow fixed-top" id="navbar">
         <div class="container">
             <a class="navbar-brand navbar-brand-custom" href="/">
@@ -66,14 +70,10 @@
         </div>
     </nav>
 
-    <div id="dark-mode-btn">
-        <input id="btn-circle" type="button"></input>
-    </div>
-
     <div class="container">
 
         <div class="body-content-custom">
-            <h1 class="text-center header-404-custom" style="width: auto">Privacy Policy</h1>
+            <h1 class="text-center header-404-custom" style="width: auto">Privacy Notice</h1>
             <p>The code I have written for this site ( available here: <a
                     href="https://github.com/psmit703/personal-website/tree/main">github.com/<wbr>psmit703/<wbr>personal-website/<wbr>tree/<Wbr>main</a>
                 ) makes limited use of non-identifiable information:
@@ -280,7 +280,7 @@
             <footer class="footer text-muted text-center" id="footer">
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a href="#">Privacy
-                        Policy</a></p>
+                        Notice</a></p>
                 <p id="delete-cookies-wrapper"><span id="delete-cookies">Delete All Cookies</span></p>
             </footer>
         </div>
