--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 </head>
 
 <body>
+    <div id="dark-mode-btn">
+        <input id="btn-circle" type="button"></input>
+    </div>
+
     <nav class="navbar navbar-expand-md navbar-light bg-light py-2 mb-5 shadow fixed-top" id="navbar">
         <div class="container">
             <a class="navbar-brand navbar-brand-custom" href="#">
@@ -66,10 +70,6 @@
             </div>
         </div>
     </nav>
-
-    <div id="dark-mode-btn">
-        <input id="btn-circle" type="button"></input>
-    </div>
 
     <div class="container">
 
@@ -225,7 +225,7 @@
             <footer class="footer text-muted text-center" id="footer">
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
-                        href="/privacy.html">Privacy Policy</a></p>
+                        href="/privacy.html">Privacy Notice</a></p>
                 <p id="delete-cookies-wrapper"><span id="delete-cookies">Delete All Cookies</span></p>
             </footer>
         </div>
