--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Error 404: Page not found">
     <meta name="author" content="Pete Smith">
 
-    <meta name="robots" content="noindex">
+    <meta name="robots" content="noindex, nofollow">
     <link rel="canonical" href="https://www.psmit.dev/404.html">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
