--- a/coding.html
+++ b/coding.html
@@ -7,6 +7,7 @@
     <meta name="description" content="My Coding Projects">
     <meta name="author" content="Pete Smith">
 
+    <meta name="robots" content="noindex, nofollow">
     <link rel="canonical" href="https://www.psmit.dev/coding.html">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
