--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="A website for all things Pete Smith">
     <meta name="author" content="Pete Smith">
 
+    <meta name="robots" content="noindex, nofollow">
     <link rel="canonical" href="https://www.psmit.dev/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
