Updated resumes, minor formatting change on resume.html

--- a/resume.html
+++ b/resume.html
@@ -72,11 +72,11 @@
     <div class="container">
         <div class="body-content-custom">
 
-            <h3 class="text-center" style="height: 45px; top: 50%; transform: translateY(25%);">
-                Technical Résumé |
-                <a href="/assets/resumes/Pete_Smith_Resume_(Technical).pdf">Direct
+            <h3 class="text-center" style="height: 75px; top: 50%; transform: translateY(25%);">
+                Technical Résumé<br><a href="/assets/resumes/Pete_Smith_Resume_(Technical).pdf">Direct
                     Download</a>
             </h3>
+
 
             <hr style="opacity: 0; margin: 20px 0 20px" />
 
@@ -94,7 +94,7 @@
                     <li>Bachelor of Science, Computer Science; Bachelor of Arts, History; Minor, Trumpet Performance
                     </li>
                     <li>Diploma Expected Dec 2024</li>
-                    <li>Cumulative GPA: 3.356 (May 2023)</li>
+                    <li>Cumulative GPA: 3.356 (Aug 2023)</li>
                     <li>Relevant Coursework: CMSC421 - Intro to AI; CMSC420 - Advanced Data Structures; CMSC351
                         - Algorithms; CMSC330 - Organization of Programming Languages</li>
                     <li>Member: History Undergraduate Association</li>
@@ -112,23 +112,23 @@
 
             <h4>Programming Projects</h4>
             <ul>
-                <li><strong>Personal Website (HTML, CSS, JS)<span style="float: right">Personal Project, Jun 2023 -
-                            Present</span></strong></li>
+                <li><strong>Personal Website (HTML, CSS, JS)<span style="float: right">(Personal Project, Jun 2023 -
+                            Present)</span></strong></li>
                 <ul>
                     <li>Designing a personal website ( <a href="https://psmit.dev/">https://www.psmit.dev</a> ) with
                         focuses on user experience and mobile readiness</li>
-                    <li>Using Bootstrap, JS, and Adobe's PDF Embed API to implement desired functionality</li>
+                    <li>Using JavaScript to implement desired features including animations and dark mode toggling</li>
                 </ul>
-                <li><strong>Pacman-Ghostbusters (Python)<span style="float: right">CMSC421, Spring 2023,
-                            UMD</span></strong></li>
+                <li><strong>Pacman-Ghostbusters (Python)<span style="float: right">(CMSC421, Spring 2023,
+                            UMD)</span></strong></li>
                 <ul>
                     <li>Implemented several functions relating to Bayes' Nets</li>
                     <li>Functions involved calculating probabilities from given data, updating belief distributions
                         across various conditions, particle filters, and joint distributions</li>
                     <li>From UC Berkeley's CS188 Project 4</li>
                 </ul>
-                <li><strong>Reinforcement Learning (Python)<span style="float: right">CMSC421, Spring 2023,
-                            UMD</span></strong></li>
+                <li><strong>Reinforcement Learning (Python)<span style="float: right">(CMSC421, Spring 2023,
+                            UMD)</span></strong></li>
                 <ul>
                     <li>Implemented Value Iteration (batch, async., and priporitized), Q-Learning, Epsilon Greedy, and
                         Approximate Q-Learning algorithms</li>
@@ -140,24 +140,23 @@
 
             <h4>Work Experience</h4>
             <ul>
-                <li><strong>Web Development Intern (NASA PDS-SBN at Univ. of Maryland)<span style="float: right">(Jun
+                <li><strong>Web Development Intern (Univ. of Maryland)<span style="float: right">(Jun
                             2023 -
                             Present)</span></strong></li>
                 <ul>
                     <li>Creating a comet statistic site for the NASA Planetary Data System-Small Bodies Node at UMD</li>
                     <li>Designing frontend using HTML, CSS, JS, and various frameworks to create a seamless user
-                        experience</li>
+                        experience with desired functionality</li>
                     <li>Implementing backend using Python to create an automated script that pulls from multiple
-                        databases usin HTTP requests and a Postgres Python library</li>
+                        databases using HTTP requests and a PostgreSQL Python library</li>
                 </ul>
             </ul>
 
 
             <hr />
 
-            <h3 class="text-center" style="height: 45px; top: 50%; transform: translateY(25%);">Humanities
-                Résumé |
-                <a href="/assets/resumes/Pete_Smith_Resume_(Humanities).pdf">Direct
+            <h3 class="text-center" style="height: 75px; top: 50%; transform: translateY(25%);">Humanities
+                Résumé<br><a href="/assets/resumes/Pete_Smith_Resume_(Humanities).pdf">Direct
                     Download</a>
             </h3>
 
@@ -176,7 +175,7 @@
                     <li>Bachelor of Arts, History; Bachelor of Science, Computer Science; Minor, Trumpet Performance
                     </li>
                     <li>Diploma Expected Dec 2024</li>
-                    <li>Cumulative GPA: 3.356 (May 2023)</li>
+                    <li>Cumulative GPA: 3.356 (Aug 2023)</li>
                     <li>Relevant Coursework: HIST354 - Antebellum America (1815-1861); HIST357 - Recent America
                         (1945-Present); HIST429A - Sex and Class in Victorian Britain; HIST319R - Genghis Khan and the
                         Mongols</li>
@@ -228,10 +227,10 @@
                 <li><strong>Web Development Intern (Univ. of Maryland)<span style="float: right">(Jun 2023 -
                             Present)</span></strong></li>
                 <ul>
-                    <li>Creating a comet info page for UMD's Minor Planet Center Annex</li>
+                    <li>Creating a comet statistic site for the NASA Planetary Data System-Small Bodies Node at UMD</li>
                     <li>Combining several software suites to create a seamless user experience with desired
                         functionality</li>
-                    <li>Requires strong teamwork and communication skills; involves significant collaboration with
+                    <li>Requires strong teamwork and communication skills; involves significant collaboration with the
                         supervisor and the overall team</li>
                 </ul>
                 <li><strong>Crew Member (McDonald's)<span style="float: right">(Jun 2022 -
