changed delete-cookies.js to specifically only delete dark mode preference
That is the only cookie being used by the site, so I think that is better for conciseness and whatnot.

--- a/writing.html
+++ b/writing.html
@@ -81,8 +81,7 @@
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
                         href="/privacy.html">Privacy
                         Notice</a></p>
-                <p id="delete-cookies-wrapper"><span id="delete-cookies">Delete All
-                        Cookies</span></p>
+                <p id="delete-cookies-wrapper"><span id="delete-cookies">Reset Dark Mode Preference</span></p>
             </footer>
         </div>
     </div>
