--- a/coding.html
+++ b/coding.html
@@ -83,8 +83,7 @@
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
                         href="/privacy.html">Privacy
                         Notice</a></p>
-                <p class="justify-content-center" id="delete-cookies-wrapper"><span id="delete-cookies">Delete All
-                        Cookies</span></p>
+                <p id="delete-cookies-wrapper"><span id="delete-cookies">Reset Dark Mode Preference</span></p>
             </footer>
         </div>
     </div>
