--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
                         href="/privacy.html">Privacy Notice</a></p>
-                <p id="delete-cookies-wrapper"><span id="delete-cookies">Delete All Cookies</span></p>
+                <p id="delete-cookies-wrapper"><span id="delete-cookies">Reset Dark Mode Preference</span></p>
             </footer>
         </div>
     </div>
