--- a/privacy.html
+++ b/privacy.html
@@ -281,7 +281,7 @@
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a href="#">Privacy
                         Notice</a></p>
-                <p id="delete-cookies-wrapper"><span id="delete-cookies">Delete All Cookies</span></p>
+                <p id="delete-cookies-wrapper"><span id="delete-cookies">Reset Dark Mode Preference</span></p>
             </footer>
         </div>
     </div>
@@ -298,6 +298,5 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 </body>
-
 
 </html>
