Updated privacy notice
Reflects Adobe PDF Embed API being removed and the new dark mode script with cookie usage

--- a/privacy.html
+++ b/privacy.html
@@ -74,7 +74,7 @@
 
         <div class="body-content-custom">
             <h1 class="text-center header-404-custom" style="width: auto">Privacy Notice</h1>
-            <p>The code I have written for this site ( available here: <a
+            <p>The code I have written for this site ( <a
                     href="https://github.com/psmit703/personal-website/tree/main">github.com/<wbr>psmit703/<wbr>personal-website/<wbr>tree/<Wbr>main</a>
                 ) makes limited use of non-identifiable information:
             <ul>
@@ -110,6 +110,13 @@
                             or sent back to me (Pete Smith) in any way.
                         </li>
                     </ul>
+                </li>
+                <li>The entire site has a toggleable dark mode. Dark mode is automatically enabled/disabled depending on
+                    a user's device settings. If a user manually toggles dark mode on or off, this preference is stored
+                    using a cookie. This cookie is set to expire automatically after 30 days. Additionally, there is a
+                    clickable option at the bottom of each page that allows a user to manually delete this cookie. The
+                    cookie is stored on the user's device, all of the processing is done by the user's browser, and
+                    nothing is sent back to me (Pete Smith) in any way.
                 </li>
             </ul>
             The code I have written does not otherwise process, store, or use any user data in any way and does not use
@@ -180,94 +187,6 @@
                                         href="https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement">GitHub
                                         Privacy Statement</a>.
                                 </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li><a href="https://developer.adobe.com/document-services/docs/overview/pdf-embed-api/">Adobe
-                        PDF Embed
-                        API</a>
-                    <ul>
-                        <li>Adobe's full privacy policy is available at <a
-                                href="https://www.adobe.com/privacy/policy.html">adobe.com/<wbr>privacy/<wbr>policy.html</a>
-                        </li>
-                        <li>As of April 20, 2023, Adobe's privacy policy has seven "key points":
-                            <ul>
-                                <li>Where your consent is required, we will obtain your permission before (i)
-                                    sending
-                                    you news and promotional material about Adobe; (ii) accessing information
-                                    stored
-                                    on
-                                    your device relating to your use
-                                    of, and engagement with, Services and Software (e.g. Adobe Connect meetings)
-                                    and
-                                    crash reports; and (iii) analyzing your
-                                    content. You can withdraw your consent to such activities at any time. <a
-                                        href="https://www.adobe.com/privacy/policy.html#withdraw-consent">Learn
-                                        more</a>.
-                                </li>
-                                <li>This policy explains when we process personal information for our legitimate
-                                    interests. You can ask us to stop
-                                    processing this information. <a
-                                        href="https://www.adobe.com/privacy/policy.html#rights">Learn more about
-                                        your
-                                        rights and how you can exercise them</a>.
-                                </li>
-                                <li>We use your personal information to enable you to register with Adobe and to
-                                    provide
-                                    you with our Services and Software,
-                                    and other products or services that you request. <a
-                                        href="https://www.adobe.com/privacy/policy.html#info-use">Learn
-                                        more</a>.
-                                </li>
-                                <li>We provide interactive features that engage with social media sites, such as
-                                    Facebook. If you use these features, these
-                                    sites will send us personal information about you. <a
-                                        href="https://www.adobe.com/privacy/policy.html#buttons">Learn more</a>.
-                                </li>
-                                <li>We use cookies and other technologies to track the use of our Services and
-                                    Software.
-                                    To learn about opportunities to
-                                    choose not to allow cookies, click <a
-                                        href="https://www.adobe.com/privacy/opt-out.html">here</a>. If you are
-                                    using
-                                    our
-                                    website in a browser,
-                                    this information is also available
-                                    in our <a href="https://www.adobe.com/privacy/cookies.html">Cookies
-                                        Policy</a>.
-                                </li>
-                                <li>There are several places within Adobe’s Services and Software that allow you
-                                    to
-                                    post
-                                    comments, upload pictures, or
-                                    submit content which will be publicly available where you choose to
-                                    participate
-                                    in
-                                    these activities. We also disclose
-                                    personal information to other companies in the Adobe family and with
-                                    advertising
-                                    and
-                                    sales partners consistent with your
-                                    choices. We also disclose information with third parties we engage to
-                                    process
-                                    personal information on our behalf or when
-                                    such sharing is required by law, or in certain other situations. <a
-                                        href="https://www.adobe.com/privacy/policy.html#websites-applications">Learn
-                                        more</a>.
-                                </li>
-                                <li>We transfer your personal information to the US and other countries, which
-                                    may
-                                    be
-                                    outside the country in which you live.
-                                    We use government-approved contractual clauses such as European Commission
-                                    approved
-                                    Standard Contractual Clauses to help
-                                    protect your personal information. <a
-                                        href="https://www.adobe.com/privacy/policy.html#info-transfer">Learn
-                                        more</a>.
-                                </li>
-
                             </ul>
                         </li>
                     </ul>
