Updated technical resume

--- a/resume.html
+++ b/resume.html
@@ -83,7 +83,8 @@
             <h3 class="text-center">Pete Smith</h3>
             <p class="text-center">(443) 254-2441 | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a> |
                 Washington, D.C. Area</p>
-            <p class="text-center"><a href="https://github.com/psmit703">github.com/psmit703</a> | <a
+            <p class="text-center"><a href="https://www.psmit.dev/">https://www.psmit.dev/</a> | <a
+                    href="https://github.com/psmit703">github.com/psmit703</a> | <a
                     href="https://www.linkedin.com/in/petesmith-umd/">linkedin.com/in/petesmith-umd</a></p>
 
             <h4>Education</h4>
@@ -119,13 +120,14 @@
                         focuses on user experience and mobile readiness</li>
                     <li>Using JavaScript to implement desired features including animations and dark mode toggling</li>
                 </ul>
-                <li><strong>Pacman-Ghostbusters (Python)<span style="float: right">(CMSC421, Spring 2023,
+                <li><strong>Bloom Filter (Python)<span style="float: right">(CMSC420, Spring 2023,
                             UMD)</span></strong></li>
                 <ul>
-                    <li>Implemented several functions relating to Bayes' Nets</li>
-                    <li>Functions involved calculating probabilities from given data, updating belief distributions
-                        across various conditions, particle filters, and joint distributions</li>
-                    <li>From UC Berkeley's CS188 Project 4</li>
+                    <li>Implemented insert, hash, rebuild, and search functions for a Bloom Filter</li>
+                    <li>Allows for arbitrary bit array length, number of hash functions, and max false-positive
+                        probability</li>
+                    <li>Automatically rebuilds the Bloom Filter when the false-positive probability is greater than the
+                        threshold as determind by a simplified, approximate probability formula</li>
                 </ul>
                 <li><strong>Reinforcement Learning (Python)<span style="float: right">(CMSC421, Spring 2023,
                             UMD)</span></strong></li>
