--- a/resume.html
+++ b/resume.html
@@ -96,9 +96,10 @@
                     </li>
                     <li>Diploma Expected Dec 2024</li>
                     <li>Cumulative GPA: 3.356 (Aug 2023)</li>
-                    <li>Relevant Coursework: CMSC421 - Intro to AI; CMSC420 - Advanced Data Structures; CMSC351
-                        - Algorithms; CMSC330 - Organization of Programming Languages</li>
-                    <li>Member: History Undergraduate Association</li>
+                    <li>Relevant Coursework: CMSC430 - Compilers; CMSC421 - Intro to AI; CMSC420 - Advanced Data
+                        Structures; CMSC351
+                        - Algorithms</li>
+                    <li>Member: Multi-Agent Reinforcement Learning Reading Group; History Undergraduate Association</li>
                 </ul>
             </ul>
 
@@ -178,10 +179,10 @@
                     </li>
                     <li>Diploma Expected Dec 2024</li>
                     <li>Cumulative GPA: 3.356 (Aug 2023)</li>
-                    <li>Relevant Coursework: HIST354 - Antebellum America (1815-1861); HIST357 - Recent America
-                        (1945-Present); HIST429A - Sex and Class in Victorian Britain; HIST319R - Genghis Khan and the
-                        Mongols</li>
-                    <li>Member: History Undergraduate Association</li>
+                    <li>Relevant Coursework: HIST466 - Immigration and Ethnicity in the U.S.; HIST355 - Civil War and
+                        Industrialization (1860-1900); HIST354 -
+                        Antebellum America (1815-1861); HIST429A - Sex and Class in Victorian Britain</li>
+                    <li>Member: History Undergraduate Association; Multi-Agent Reinforcement Learning Reading Group</li>
                 </ul>
             </ul>
 
