made wording in privacy.html more precise

--- a/privacy.html
+++ b/privacy.html
@@ -119,7 +119,8 @@
                     nothing is sent back to me (Pete Smith) in any way.
                 </li>
             </ul>
-            The code I have written does not otherwise process, store, or use any user data in any way and does not use
+            Other than what has been previously stated on this page, the code I have written does not process, store,
+            or use any user data in any way and does not use
             cookies.
             However, this
             site makes use of various third party
