--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
 
     <nav class="navbar navbar-expand-md navbar-light bg-light py-2 mb-5 shadow fixed-top" id="navbar">
         <div class="container">
-            <a class="navbar-brand navbar-brand-custom" href="#">
-                <img src="/assets/images/site-logo-1080.jpeg" width="50" height="50"
-                    class="d-inline-block align-center nav-logo-custom" alt="Site logo">Pete Smith
+            <a class="navbar-brand navbar-brand-custom" href="#">Pete Smith
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-options"
@@ -86,9 +84,9 @@
                 </div>
                 <div class="col-md">
                     <p class="quick-facts-custom">
-                        Some quick facts about me:
+                        Some info about me:
 
-                    <ul class="quick-facts-custom" title="Some quick facts about me:">
+                    <ul class="quick-facts-custom">
                         <li>I'm an aspiring software engineer based in the Washington, DC area</li>
                         <li>I'm a senior at the University of Maryland, College Park</li>
                         <li>I'm pursuing two degrees!
