--- a/resume.html
+++ b/resume.html
@@ -40,9 +40,7 @@
 
     <nav class="navbar navbar-expand-md navbar-light bg-light py-2 mb-5 shadow fixed-top" id="navbar">
         <div class="container">
-            <a class="navbar-brand navbar-brand-custom" href="/">
-                <img src="/assets/images/site-logo-1080.jpeg" width="50" height="50"
-                    class="d-inline-block align-center nav-logo-custom" alt="Site logo">Pete Smith
+            <a class="navbar-brand navbar-brand-custom" href="/">Pete Smith
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-options"
