Centered text on navbar for non-mobile format
Text for navbar options is now justified to the center. This makes it so that, when switching to a new page (and that new page being bolded in the navbar), it does not bold to the right anymore, now it bolds to the left and the right. This is very subtle and I don't know how to explain it better than that, but I promise that (for me) it is better and it works.

Added a JS file to make it so that this does not affected the dropdown navbar on mobile format.

--- a/privacy.html
+++ b/privacy.html
@@ -31,6 +31,9 @@
 
     <!-- delete all cookies script -->
     <script defer src="/assets/js/delete-cookies.js"></script>
+
+    <!-- navbar item text on left for mobile format script -->
+    <script defer src="/assets/js/navbar-text-left-mobile.js"></script>
 </head>
 
 <body>
@@ -51,16 +54,16 @@
             <div class="collapse navbar-collapse" id="navbar-options">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-2">
-                        <a class="nav-link nav-home-custom" href="/">Home</a>
+                        <a class="nav-link nav-home-custom text-center" href="/">Home</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link nav-resume-custom" href="/resume.html">Résumé</a>
+                        <a class="nav-link nav-resume-custom text-center" href="/resume.html">Résumé</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link nav-coding-custom" href="/coding.html">Coding Projects</a>
+                        <a class="nav-link nav-coding-custom text-center" href="/coding.html">Coding Projects</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link nav-writing-custom" href="/writing.html">Writing Samples</a>
+                        <a class="nav-link nav-writing-custom text-center" href="/writing.html">Writing Samples</a>
                     </li>
                 </ul>
             </div>
