--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 
     <!-- delete all cookies script -->
     <script defer src="/assets/js/delete-cookies.js"></script>
+
+    <!-- navbar item text on left for mobile format script -->
+    <script defer src="/assets/js/navbar-text-left-mobile.js"></script>
 </head>
 
 <body>
@@ -54,16 +57,17 @@
             <div class="collapse navbar-collapse" id="navbar-options">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-2 active active-custom">
-                        <a class="nav-link nav-home-custom" href="#">Home<span class="sr-only">(current)</span></a>
+                        <a class="nav-link nav-home-custom text-center" href="#">Home<span
+                                class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link nav-resume-custom" href="/resume.html">Résumé</a>
+                        <a class="nav-link nav-resume-custom text-center" href="/resume.html">Résumé</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link nav-coding-custom" href="/coding.html">Coding Projects</a>
+                        <a class="nav-link nav-coding-custom text-center" href="/coding.html">Coding Projects</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link nav-writing-custom" href="/writing.html">Writing Samples</a>
+                        <a class="nav-link nav-writing-custom text-center" href="/writing.html">Writing Samples</a>
                     </li>
                 </ul>
             </div>
