--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <footer class="footer text-muted text-center" id="footer">
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
-                        href="/privacy.html">Privacy Notice</a></p>
+                        href="/changelog.html">Changelog</a> | <a href="/privacy.html">Privacy Notice</a></p>
                 <p id="delete-cookies-wrapper"><span id="delete-cookies">Reset Dark Mode Preference</span></p>
             </footer>
         </div>
