--- a/privacy.html
+++ b/privacy.html
@@ -199,7 +199,8 @@
             <hr />
             <footer class="footer text-muted text-center" id="footer">
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
-                <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a href="#">Privacy
+                <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
+                        href="/changelog.html">Changelog</a> | <a href="#">Privacy
                         Notice</a></p>
                 <p id="delete-cookies-wrapper"><span id="delete-cookies">Reset Dark Mode Preference</span></p>
             </footer>
