Added note clarifying why some commit messages may have weird formatting
GitHub's public API does not appear to distinguish between commit summaries and commit descriptions in any way, and since I have not consistently used a marker (e.g., "-" at the end of every summary), I am unable to algorithmically do this.

Ironically, this commit description will be an example of what I am talking about. The summary ends with "weird formatting" and the description starts with "GitHub's public".

--- a/changelog.html
+++ b/changelog.html
@@ -86,6 +86,14 @@
 
             <div class="commit-spacing"></div>
 
+            <h5 class="text-center"><i>Please note that while GitHub internally supports separate commit
+                    summaries
+                    and descriptions, their public API does not</i></h5>
+            <h5 class="text-center"><i>Therefore, if a commit description was provided, it will appear appended to the
+                    summary</i></h5>
+
+            <div class="commit-spacing"></div>
+
             <div id="changelog-body">
             </div>
 
