Added clicky script for counting site views.
Clicky is an alternative to Google Analytics that claims to be a "privacy-friendly, GDPR-compliant website analytics service."

--- a/changelog.html
+++ b/changelog.html
@@ -37,6 +37,9 @@
 
     <!-- changelog/GitHub API script -->
     <script defer type="module" src="/assets/js/changelog.js"></script>
+
+    <!-- view counter script -->
+    <script async data-id="101425859" src="//static.getclicky.com/js"></script>
 </head>
 
 <body>
