--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 
     <!-- navbar item text on left for mobile format script -->
     <script defer src="/assets/js/navbar-text-left-mobile.js"></script>
+
+    <!-- view counter script -->
+    <script async data-id="101425859" src="//static.getclicky.com/js"></script>
 </head>
 
 <body>
