Added Plausible view counting script.
Similar to Clicky in that it is GDPR-compliant, etc. Adding to test differences between the two and see which one I like better.

--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
     <!-- navbar item text on left for mobile format script -->
     <script defer src="/assets/js/navbar-text-left-mobile.js"></script>
 
-    <!-- view counter script -->
+    <!-- Clicky view counter script -->
     <script async data-id="101425859" src="//static.getclicky.com/js"></script>
+
+    <!-- Plausible view counter script -->
+    <script defer data-domain="psmit.dev" src="https://plausible.io/js/script.js"></script>
 </head>
 
 <body>
